--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,23 @@
   <title>The Weather App</title>
 </head>
 <body>
+  <div class="container">
+    <div id="header">
+      <h1 id="page-header">The Weather App</h1>
+    </div>
+    <div id="search">
+      <form>
+        <label for="city">
+          Enter the name of the city:
+        </label>
+        <input id="city" type="text">
+        <button id="enter-city">
+          Submit
+        </button>
+      </form>
+    </div>
+    <div id="current"></div>
+    <div id="forecast"></div>
+  </div>
 </body>
 </html>
