Added error handling

--- a/src/index.html
+++ b/src/index.html
@@ -16,13 +16,17 @@
     </div>
     <div id="search">
       <form>
-        <label for="city">
-          Enter the name of the city:
-        </label>
-        <input id="city" type="text">
-        <button id="enter-city">
-          Submit
-        </button>
+        <div class='label'>
+          <label for="city">
+            Enter the name of the city:
+          </label>
+        </div>
+        <div class="'city-input">
+          <input id="city" type="text">
+          <button id="enter-city">
+            Submit
+          </button>
+        </div>
       </form>
     </div>
     <div id="current"></div>
